# Shelleco-UDST

./: .gitattributes  .gitignore  readme.md  setup.bash
Lane Detection/: constants.py  gui.py  image.py  main.py  motor.py  processor.py  readme.md  requirements.txt  roi.py
eco-marathon-dashboard/: README.md  package-lock.json  package.json
eco-marathon-dashboard/public/: electron.js
eco-marathon-dashboard/src/: App.css  App.js
eco-marathon-dashboard/src/components/: ControlPanel.js  ImageDisplay.js  JoystickControl.js  NodeStatus.js  PerceptionView.js  SensorStatus.js  SpeedDisplay.js  SteeringDisplay.js  SystemStatus.js
install/: local_setup.sh  setup.sh
log/: latest_build
src/eco_control/: setup.cfg  setup.py
src/eco_control/eco_control/: lateral_controller_node.py  longitudinal_controller_node.py  longitudnal_controller_node.py  motor_node.py  steering_node.py
src/eco_interfaces/: CMakeLists.txt  package.xml
src/eco_interfaces/msg/: ParkingArea.msg  StopSign.msg
src/eco_localization/: package.xml  setup.cfg  setup.py
src/eco_perception/: package.xml  setup.cfg  setup.py
src/eco_perception/eco_perception/: lane_detection_node.py  obstacle_detection_node.py  stop_sign_node.py
src/eco_perception/launch/: eco_mar.launch.py
src/eco_perception/test/: pid.py
src/eco_planning/: setup.cfg  setup.py
src/eco_planning/eco_planning/: dashboard_node.py  section1_planner_node.py  section2_planner_node.py  state_machine_node.py
src/sensors/simple_camera/: package.xml  (+2 more)
src/test/: DFRobot_MCP4725.py  test_lane.py  tx_rx_test.py  web_control_ros2.py
(+394 files in other folders)
